[gd_scene load_steps=2 format=3 uid="uid://1tnlimgpil8r"]

[ext_resource type="Script" uid="uid://bucxfb5ejg87b" path="res://scripts/deck_manager.gd" id="1_gdl0q"]

[node name="Deck_manager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gdl0q")

[node name="hand_ui" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 172.0
offset_top = 336.0
offset_right = 960.0
offset_bottom = 559.0
alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 443.0
offset_top = 31.0
offset_right = 1115.0
offset_bottom = 245.0
theme_override_font_sizes/font_size = 128
text = "Discard Selected Card"

[node name="deck_count" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 978.0
offset_top = 490.0
offset_right = 1100.0
offset_bottom = 619.0
theme_override_font_sizes/font_size = 128
text = "23"

[node name="cards_in_hand" type="Label" parent="."]
layout_mode = 0
offset_left = 462.0
offset_top = 560.0
offset_right = 682.0
offset_bottom = 611.0
theme_override_font_sizes/font_size = 64
text = "3/3"
horizontal_alignment = 1

[node name="Play card" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="Button" to="." method="_on_discard_pressed"]
[connection signal="pressed" from="Play card" to="." method="_on_play_card_pressed"]
